RESOLVED FIXED119871
Flash of garbage pixels when playing a show on Hulu
https://bugs.webkit.org/show_bug.cgi?id=119871
Summary Flash of garbage pixels when playing a show on Hulu
Simon Fraser (smfr)
Reported 2013-08-15 15:28:41 PDT
Flash of garbage pixels when playing a show on Hulu
Attachments
Patch (5.84 KB, patch)
2013-08-15 15:37 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2013-08-15 15:29:25 PDT
Simon Fraser (smfr)
Comment 2 2013-08-15 15:37:32 PDT
Tim Horton
Comment 3 2013-08-15 15:40:09 PDT
Comment on attachment 208866 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=208866&action=review > Source/WebCore/rendering/RenderLayerCompositor.cpp:780 > + layer->setViewportConstrainedNotCompositedReason(RenderLayer::NoNotCompositedReason); The code above only resets this if it's already set to not composited, and sets layerChanged (which gets returned). Does that matter? Should we do it here too?
Simon Fraser (smfr)
Comment 4 2013-08-15 16:17:27 PDT
We don't need to set layerChanged . http://trac.webkit.org/changeset/154147
Note You need to log in before you can comment on or make changes to this bug.